Updated description CNWW symposia
Updated description CNWW symposia

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1219,7 +1219,7 @@
 					<key>page16 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1228,11 +1228,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QXfzandFDohp
-								SKHV+HiXxw==
+								XCIvcVeL6F84
+								+5nesdoVlw==
 								</data>
 								<key>Size</key>
-								<integer>55394</integer>
+								<integer>43361</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -1318,21 +1318,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GLxoqkCg+YJX
-								PTuA1/lmnw==
+								njb8OkxhNQZX
+								wt4CFXd8Sw==
 								</data>
 								<key>Size</key>
-								<integer>147365</integer>
+								<integer>103552</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7x/ohVyrC9XV
-								sNoAQmvbvQ==
+								DsKSrx1qb7Cw
+								OrXNwK85KA==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2579,7 +2579,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2838,11 +2838,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DZTOFEsieKyX
-								AUwMDyTbEQ==
+								V9paOSbnaLMF
+								o2BQRg59jg==
 								</data>
 								<key>Size</key>
-								<integer>60345</integer>
+								<integer>60226</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2855,7 +2855,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3064,31 +3064,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5baeXlRne7sb
-								XjJRJUHEKA==
+								txpy4UEFBDB4
+								ZufXpxprug==
 								</data>
 								<key>Size</key>
-								<integer>160642</integer>
+								<integer>116829</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yB9eyt4sVms8
-								Pt0nZddqkA==
+								j01u9WyIDHX5
+								OPEs2fCzLg==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jLVDCM5/3o8C
-								cY6JGCJEtg==
+								nWOZ3/46yifK
+								6pHB19nd+Q==
 								</data>
 								<key>Size</key>
-								<integer>68321</integer>
+								<integer>56210</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:33:46Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3330,31 +3330,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9if4zq78ngn6
-								xej1fHKgbA==
+								oFIQlkOmcvG6
+								ituL/71Uog==
 								</data>
 								<key>Size</key>
-								<integer>164132</integer>
+								<integer>120319</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								l34sMKE0f9Zf
-								89iotaKtHA==
+								9gJ4SOMT7PE+
+								JUDfJl2wqA==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yzTu5oSaaDdS
-								MkNFjB1DGA==
+								PaHtil5Vlzr0
+								SO1VcKT2/A==
 								</data>
 								<key>Size</key>
-								<integer>69346</integer>
+								<integer>57178</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3999,7 +3999,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4358,11 +4358,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rDM9qOg65Xmr
-								vU0oDjfvLg==
+								NkIbaNBsov6Y
+								PnfeDW0uSA==
 								</data>
 								<key>Size</key>
-								<integer>99437</integer>
+								<integer>99313</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4641,7 +4641,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4856,15 +4856,25 @@
 								<key>Size</key>
 								<integer>108726</integer>
 							</dict>
-							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
+							<key>files/stacks-image-a4d3338-974x648.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3YW7fsJffz3y
-								xSIicOAdcA==
+								lB1mh9fpr2ck
+								Bq1LxBxRjg==
 								</data>
 								<key>Size</key>
-								<integer>553274</integer>
+								<integer>393696</integer>
+							</dict>
+							<key>files/stacks-image-a4d3338-974x648@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZxrLMGpf77Sn
+								PefUI19lpw==
+								</data>
+								<key>Size</key>
+								<integer>784860</integer>
 							</dict>
 							<key>files/stacks-image-b2e3b8a-98x98.jpg</key>
 							<dict>
@@ -4970,11 +4980,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vfySnDmS+Sqy
-								OTR8O64/IA==
+								FkJl9NMvupnY
+								v3X1vWg0Bg==
 								</data>
 								<key>Size</key>
-								<integer>94334</integer>
+								<integer>94293</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6521,7 +6531,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:33:46Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6570,11 +6580,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								khKXPhpsPLYh
-								LB62fuAI1A==
+								S5ZBs6u4ciX3
+								aSLjnum3Iw==
 								</data>
 								<key>Size</key>
-								<integer>4695</integer>
+								<integer>3543</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6587,7 +6597,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7626,11 +7636,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4L5Y709SydlJ
-								3rVEat3+Ng==
+								F5WvA2MwROmd
+								Qga+VNTfCw==
 								</data>
 								<key>Size</key>
-								<integer>2083</integer>
+								<integer>1995</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
