--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rDM9qOg65Xmr
-								vU0oDjfvLg==
+								NkIbaNBsov6Y
+								PnfeDW0uSA==
 								</data>
 								<key>Size</key>
-								<integer>99437</integer>
+								<integer>99313</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
