--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -242,31 +242,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5baeXlRne7sb
-								XjJRJUHEKA==
+								txpy4UEFBDB4
+								ZufXpxprug==
 								</data>
 								<key>Size</key>
-								<integer>160642</integer>
+								<integer>116829</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yB9eyt4sVms8
-								Pt0nZddqkA==
+								j01u9WyIDHX5
+								OPEs2fCzLg==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jLVDCM5/3o8C
-								cY6JGCJEtg==
+								nWOZ3/46yifK
+								6pHB19nd+Q==
 								</data>
 								<key>Size</key>
-								<integer>68321</integer>
+								<integer>56210</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
