--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QXfzandFDohp
-								SKHV+HiXxw==
+								XCIvcVeL6F84
+								+5nesdoVlw==
 								</data>
 								<key>Size</key>
-								<integer>55394</integer>
+								<integer>43361</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -132,21 +132,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GLxoqkCg+YJX
-								PTuA1/lmnw==
+								njb8OkxhNQZX
+								wt4CFXd8Sw==
 								</data>
 								<key>Size</key>
-								<integer>147365</integer>
+								<integer>103552</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7x/ohVyrC9XV
-								sNoAQmvbvQ==
+								DsKSrx1qb7Cw
+								OrXNwK85KA==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
