--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:15:54Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -292,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DZTOFEsieKyX
-								AUwMDyTbEQ==
+								V9paOSbnaLMF
+								o2BQRg59jg==
 								</data>
 								<key>Size</key>
-								<integer>60345</integer>
+								<integer>60226</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
