--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:33:46Z</date>
+						<date>2018-05-19T16:42:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,31 +262,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9if4zq78ngn6
-								xej1fHKgbA==
+								oFIQlkOmcvG6
+								ituL/71Uog==
 								</data>
 								<key>Size</key>
-								<integer>164132</integer>
+								<integer>120319</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								l34sMKE0f9Zf
-								89iotaKtHA==
+								9gJ4SOMT7PE+
+								JUDfJl2wqA==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yzTu5oSaaDdS
-								MkNFjB1DGA==
+								PaHtil5Vlzr0
+								SO1VcKT2/A==
 								</data>
 								<key>Size</key>
-								<integer>69346</integer>
+								<integer>57178</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
