--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-19T16:42:27Z</date>
+						<date>2018-05-21T13:58:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3350,11 +3350,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PaHtil5Vlzr0
-								SO1VcKT2/A==
+								JzHi0ysw3Ber
+								/Pn5ykCPJQ==
 								</data>
 								<key>Size</key>
-								<integer>57178</integer>
+								<integer>57240</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4997,7 +4997,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-18T17:33:46Z</date>
+						<date>2018-05-21T13:58:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5356,31 +5356,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YWBAJKIZExq7
-								iizLC0h5jg==
+								oW9n6g17T5Gh
+								WGiRn3jBIA==
 								</data>
 								<key>Size</key>
-								<integer>188356</integer>
+								<integer>144658</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2rYrzz2EZaIq
-								rx0Zot0jOQ==
+								7aDLD2rVcWbM
+								ON1L4LaP1Q==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>24075</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5dAZmf2OhWbJ
-								Val+yxLe6w==
+								PpSe5GSiufo8
+								6idhdpLKCA==
 								</data>
 								<key>Size</key>
-								<integer>102661</integer>
+								<integer>92242</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
