--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-21T13:58:48Z</date>
+						<date>2018-05-21T20:45:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -68,6 +68,26 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-0dd0fd3-300x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								/+gUVNDoUa72
+								sq7BV9NzCQ==
+								</data>
+								<key>Size</key>
+								<integer>68345</integer>
+							</dict>
+							<key>files/stacks-image-0dd0fd3-300x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								erVlCbjiU39h
+								v10x8sPHoA==
+								</data>
+								<key>Size</key>
+								<integer>222004</integer>
+							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -88,26 +108,6 @@
 								<key>Size</key>
 								<integer>337058</integer>
 							</dict>
-							<key>files/stacks-image-24a754b-250x254.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								vVeZyTy9ktpw
-								4c/asRc/Xg==
-								</data>
-								<key>Size</key>
-								<integer>87004</integer>
-							</dict>
-							<key>files/stacks-image-3d432fc.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								o8UCMeKBq+6n
-								bQFSm7Vhjg==
-								</data>
-								<key>Size</key>
-								<integer>95571</integer>
-							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -127,6 +127,36 @@
 								</data>
 								<key>Size</key>
 								<integer>338288</integer>
+							</dict>
+							<key>files/stacks-image-742d922-1000x196.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LBTIV5vD7DNM
+								8WJkxi8aaQ==
+								</data>
+								<key>Size</key>
+								<integer>75101</integer>
+							</dict>
+							<key>files/stacks-image-79c18a1-300x218.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								jdOwxthDYAgR
+								Be0ngDdx0g==
+								</data>
+								<key>Size</key>
+								<integer>18725</integer>
+							</dict>
+							<key>files/stacks-image-79c18a1-300x218@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yF5XMAWDgg4Q
+								6tTSb2qY3A==
+								</data>
+								<key>Size</key>
+								<integer>41827</integer>
 							</dict>
 							<key>files/stacks-image-7e9dad3-250x250.png</key>
 							<dict>
@@ -188,16 +218,6 @@
 								<key>Size</key>
 								<integer>353790</integer>
 							</dict>
-							<key>files/stacks-image-c069f05-250x262.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ALCnIHNq/OII
-								io6Gxay4zQ==
-								</data>
-								<key>Size</key>
-								<integer>89349</integer>
-							</dict>
 							<key>files/stacks-image-eeb0773-250x256.png</key>
 							<dict>
 								<key>Digest</key>
@@ -238,35 +258,35 @@
 								<key>Size</key>
 								<integer>63267</integer>
 							</dict>
-							<key>files/stacks-image-f38d32b-800x688.png</key>
+							<key>files/stacks-image-f38d32b-450x386.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								WmwBlwPRcj//
-								XlkCNgijdQ==
+								BOLf/keU4lon
+								gRAFjgtFfg==
 								</data>
 								<key>Size</key>
-								<integer>168015</integer>
+								<integer>67530</integer>
 							</dict>
-							<key>files/stacks-image-f38d32b-800x688@2x.png</key>
+							<key>files/stacks-image-f38d32b-450x386@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KtiPnHEcaHvC
-								D7lPKXVo6Q==
+								BKnt+BMFzYt0
+								6aH1mFPVbA==
 								</data>
 								<key>Size</key>
-								<integer>340282</integer>
+								<integer>196392</integer>
 							</dict>
 							<key>files/stacks_page_page36.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								oFIQlkOmcvG6
-								ituL/71Uog==
+								AeHb7sYXQJ/v
+								Mz59+5gdAw==
 								</data>
 								<key>Size</key>
-								<integer>120319</integer>
+								<integer>116896</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -282,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JzHi0ysw3Ber
-								/Pn5ykCPJQ==
+								csMfEmAtBncA
+								ovScjiz7yA==
 								</data>
 								<key>Size</key>
-								<integer>57240</integer>
+								<integer>55209</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
